# db2ndb

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  sample.py  tox.ini
.github/workflows/: lint.yaml  test.yaml
src/db2ndb/: __main__.py  cli.py  main.py  transformations.py  typing.py
src/db2ndb/transformers/: __init__.py  _builders.py  entities.py  get.py  model.py  properties.py  put.py
tests/: test_cli.py  test_main.py  test_transformations.py
tests/test_transformers/: test_entitites.py  test_get.py  test_model.py  test_properties.py  test_put.py
