[project]
name = "db2ndb"
authors = [{name = "Kamil Turek", email = "kamil.turek@hotmail.com"}]
description = "A tool for migrating from google.appengine.ext.db to google.appengine.ext.ndb"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["appengine", "db", "ndb", "datastore"]
license = {text = "MIT"}
dynamic = ["version"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "libcst"
]

[project.scripts]
db2ndb = "db2ndb.cli:run"

[project.optional-dependencies]
dev = [
    "pytest"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr="db2ndb.__version__"}

[tool.pytest.ini_options]
pythonpath = "src"
